--- a/updates/index.html
+++ b/updates/index.html
@@ -7,7 +7,7 @@ show_in_navigation: true
 navigation_order: 4
 ---
 
-<p class="editable">Get an introduction to some industry topics and stay informed with our in-depth advice articles.</p>
+<p class="editable">Get an introduction to youth topics and stay informed about our projects.</p>
 
 <p class="editor-link"><a href="cloudcannon:collections/_posts" class="btn"><strong>&#9998;</strong> Update Advice Posts</a></p>
 
